# PhiChain-Rewrite-in-Tauri

./: .gitignore  RPE_Feature_Reference.md  ULTIMATE_UI_OVERHAUL_PLAN.md  index.html  package-lock.json  package.json  phichain-tauri-migration-plan.md  vite.config.ts
.claude/: launch.json
phichain-chart/src/migration/: migration_1_2.rs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/audio/: audioEngine.ts  hitSoundManager.ts
src/canvas/: easings.ts  eventCanvasRenderer.ts  events.ts  gameRenderer.ts  hitEffects.ts  postProcess.ts  shaders.ts  timelineRenderer.ts  videoBackground.ts
src/components/BpmList/: BpmList.tsx
src/components/ChartSettings/: ChartSettings.tsx
src/components/CommandPalette/: CommandPalette.tsx
src/components/EffectsEditor/: EffectsEditor.tsx
src/components/GamePreview/: GamePreview.tsx  (+1 more)
src/hooks/: useClipboard.ts  useHotkeys.ts  useMenus.ts
src/stores/: audioStore.ts  chartStore.ts  editorStore.ts  groupStore.ts  recentProjectsStore.ts  respackStore.ts  settingsStore.ts  tabStore.ts  toastStore.ts
src/types/: chart.ts  editor.ts  extra.ts  group.ts
src/utils/: appState.ts  appStorage.ts  autosave.ts  beat.ts  bpmList.ts  chartSessions.ts  chartValidation.ts  curveNoteTrack.ts  importChart.ts  infoYmlParser.ts  ipc.ts  noteUid.ts  officialExport.ts  officialImport.ts  parametricTrajectory.ts  pecExport.ts  pecImport.ts  pezExport.ts  projectStorage.ts  respackLoader.ts  rpeExport.ts  rpeImport.ts
(+42 files in other folders)
