[package]
name = "phichain-next"
version = "0.1.0"
edition = "2021"

[lib]
name = "phichain_next_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Existing phichain crates — UNCHANGED from original project
phichain-chart = { path = "../phichain-chart" }
phichain-compiler = { path = "../phichain-compiler" }

# Serialization (for IPC between Rust ↔ TypeScript)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Audio analysis (spectrogram FFT)
realfft = "3.5.0"

# Logging
tracing = "0.1"
